--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,12 @@
 
 version: 2
 updates:
-  - package-ecosystem: "" # See documentation for possible values
-    directory: "/" # Location of package manifests
+  - package-ecosystem: "all"
     schedule:
-      interval: "daily"
+      interval: "hourly"
+    commit:
+      message: |
+        Updating dependencies
+      push:
+        branch: "main"
+
