--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,9 +5,9 @@
 
 version: 2
 updates:
-  - package-ecosystem: "all"
+  - package-ecosystem: "gomod"
     schedule:
-      interval: "hourly"
+      interval: "daily"
     commit:
       message: |
         Updating dependencies
