--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,12 +5,7 @@
 
 version: 2
 updates:
-  - package-ecosystem: "gomod"
+  - package-ecosystem: gomod
+    directory: /
     schedule:
-      interval: "daily"
-    commit:
-      message: |
-        Updating dependencies
-      push:
-        branch: "main"
-
+      interval: daily
